--- a/Mobile_Recharge/mobile_recharge_frontend/src/app/admin/admin-layout/admin-layout.component.html
+++ b/Mobile_Recharge/mobile_recharge_frontend/src/app/admin/admin-layout/admin-layout.component.html
@@ -80,8 +80,7 @@
             <li class="nav-item mb-2">
               <a
                 class="nav-link d-flex align-items-center px-3 py-2 rounded"
-                [routerLink]="['/admin/admin-dashboard']"
-                [queryParams]="{ tab: 'history' }"
+                routerLink="/admin/recharge-history"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }"
               >
