--- a/Mobile_Recharge/mobile_recharge_frontend/src/app/layouts/main-layout/main-layout.component.html
+++ b/Mobile_Recharge/mobile_recharge_frontend/src/app/layouts/main-layout/main-layout.component.html
@@ -1,5 +1,6 @@
 <div class="layout-wrapper">
   <nav
+    *ngIf="showNavbar"
     class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top custom-themed-navbar"
   >
     <div class="container-fluid">
@@ -44,7 +45,7 @@
     </div>
   </nav>
 
-  <main class="main-content container-fluid p-4 mt-5">
+  <main class="main-content container-fluid p-4" [class.mt-5]="showNavbar">
     <router-outlet></router-outlet>
   </main>
   <footer class="footer" aria-label="Site Footer">
